Fixed menu layout on tablet and mobile

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -13,7 +13,9 @@ div, span, input, select {
 #settings_menu {
 	transition: .4s;
 	position: absolute;
-	display: block;
+	display: flex;
+	flex-direction: column;
+	width: 100%;
 
 	&.closed {
 		max-height: 0px;
@@ -24,6 +26,10 @@ div, span, input, select {
 		max-height: auto;
 		align-self: stretch;
 		opacity: 1;
+	}
+
+	& > div {
+		flex-grow: 1;
 	}
 }
 
