--- a/src/scss/_tablethd.scss
+++ b/src/scss/_tablethd.scss
@@ -10,6 +10,10 @@
 		position: static;
 		max-height: auto;
 		opacity: 1;
+
+		& :first-child {
+			margin-right: auto;
+		}
 	}
 
 	#settings_container {
